hils-heika Werbung

--- a/src/components/Kurse/Kurse.astro
+++ b/src/components/Kurse/Kurse.astro
@@ -15,7 +15,7 @@ import KurseItem from "./KurseItem.astro";
       h3="Kosten:"
       p="Anmeldegebühr 40€ & für jede Stundenteilnahme 4€"
     />
-    <KurseEntries h3="Beginn des Kurses:" p="19.06.2023" />
+    <KurseEntries h3="Beginn des Kurses:" p="Ende Juni 2024" />
   </KurseItem>
   
   <!--Bronze -->
@@ -29,7 +29,7 @@ import KurseItem from "./KurseItem.astro";
       h3="Kosten:"
       p="Anmeldegebühr 25€ & für jede Stundenteilnahme 4€"
     />
-    <KurseEntries h3="Beginn des Kurses:" p="10.07.2023" />
+    <KurseEntries h3="Beginn des Kurses:" p="Ende Juni 2024" />
   </KurseItem>
 
   <div class="anmeldung">
