--- a/src/components/Veranstaltungen/TermineItem.astro
+++ b/src/components/Veranstaltungen/TermineItem.astro
@@ -32,6 +32,8 @@ const { date, day, month, titel } = Astro.props;
         font-weight: bold;
         font-size: 30pt;
         font-weight: 700;
+        min-width: 4rem;
+        text-align: end;
     }
     div {
         color: var(--text);
