--- a/src/pages/job.astro
+++ b/src/pages/job.astro
@@ -11,7 +11,7 @@ import MainLayout from "../layouts/MainLayout.astro";
         <div>
         <h2>Voraussetzungen:</h2>
             <ul>
-                <li>> 18 Jahre</li>
+                <li>18 Jahre</li>
                 <li>
                     DLRG Silber <br />
                     (kann auch mit unserer Unterstützung erworben werden)
@@ -21,7 +21,7 @@ import MainLayout from "../layouts/MainLayout.astro";
 
         <p>Bitte meldet euch per E-Mail:<br> <a href="mailto:foerderverein@freibad-delligsen.de">foerderverein@freibad-delligsen.de</a></p>
 
-        <a class="buttonA" href="/documents/ferienjob.jpeg"><span>Fleyer</span></a>
+        <a class="buttonA" href="/documents/ferienjob.jpeg"><span>Flyer</span></a>
     </div>
 </MainLayout>
 <style>
