--- a/src/pages/veranstaltungen.astro
+++ b/src/pages/veranstaltungen.astro
@@ -12,17 +12,52 @@ import TermineItem from "../components/Veranstaltungen/TermineItem.astro";
     <Grid titel="Veranstaltungen">
         <TermineGrid>
             <TermineItem
-                date="16."
+                date="9."
                 day="Sa"
-                month="Sep"
-                titel="Bänke abbauen 10 Uhr"
+                month="März"
+                titel="1. Arbeitseinsatz 2024"
             />
             <div></div>
             <TermineItem
-                date="30."
+                date="17."
+                day="So"
+                month="März"
+                titel="Jahreshauptversammlung"
+            />
+            <div></div>
+            <TermineItem
+                date="6."
                 day="Sa"
-                month="Sep"
-                titel="Heckenschnitt und Grünpflege 10 Uhr"
+                month="April"
+                titel="Chlorgasschulung"
+            />
+            <div></div>
+            <TermineItem
+                date="24."
+                day="Mi"
+                month="April"
+                titel="Becken putzen Feuerwehr"
+            />
+            <div></div>
+            <TermineItem
+                date="27."
+                day="Sa"
+                month="April"
+                titel="Beckenanstrich"
+            />
+            <div></div>
+            <TermineItem
+                date="4."
+                day="Sa"
+                month="Mai"
+                titel="Beckenanstrich Ersatztermin"
+            />
+            <div></div>
+            <TermineItem
+                date="31."
+                day="Sa"
+                month="August"
+                titel="Poolparty"
             />
         </TermineGrid>
     </Grid>
