--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ import Verlinkung from "../components/Index/Verlinkung.astro";
 import Kurse from "../components/Kurse/Kurse.astro";
 import LandingLogo from "../components/Index/LandingLogo.astro";
 import MainLayout from "../layouts/MainLayout.astro";
-import Countdown from "../components/Countdown.astro";
+import HilsHeika from "../components/HilsHeika.astro";
 ---
 
 <MainLayout
@@ -35,6 +35,7 @@ import Countdown from "../components/Countdown.astro";
   <Accordion />
   <OSM className="full-width" />
   <Kurse />
+  <HilsHeika />
 </MainLayout>
 
 <style>
