--- a/src/pages/preise.astro
+++ b/src/pages/preise.astro
@@ -16,14 +16,14 @@ import MainLayout from "../layouts/MainLayout.astro";
         <!--Abendtarif -->
         <Card titel="Abendtarif*">
             <CardItem titel="Erwachsene:" content="2,00 €"/>
-            <CardItem titel="Kinder und Jugendliche: (ab 4 - 18 Jahre)" content="frei"/>
+            <CardItem titel="Kinder und Jugendliche: (ab 4 - 18 Jahre)" content="1,00 €"/>
             <CardItem titel="Kinder unter 4 Jahren in Begleitung Erwachsener:" content="frei"/>
         </Card>
         <!--Jahreskarten -->
         <Card titel="Jahreskarten**">
             <CardItem titel="Erwachsene:" content="50,00 €"/>
-            <CardItem titel="Jugendliche:" content="25,00 €"/>
-            <CardItem titel="Familie mit Kindern: (inklusive aller Kinder unter 18 Jahren)" content="90,00 €"/>
+            <CardItem titel="Jugendliche:" content="30,00 €"/>
+            <CardItem titel="Familie mit Kindern: (inklusive aller Kinder unter 18 Jahren)" content="100,00 €"/>
         </Card>
     </Grid>
     <div>
