--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,6 +6,7 @@ import Kurse from "../components/Kurse/Kurse.astro";
 import LandingLogo from "../components/Index/LandingLogo.astro";
 import MainLayout from "../layouts/MainLayout.astro";
 import HilsHeika from "../components/HilsHeika.astro";
+import Countdown from "components/Countdown.astro";
 ---
 
 <MainLayout
@@ -26,11 +27,11 @@ import HilsHeika from "../components/HilsHeika.astro";
       />
     </div>
   </LandingLogo>
-  <!--Countdown
-  <Countdown title="Saisonende" date="Sep 12, 2023 20:00:00" bg_color="secondary">
-    Die Saison endet am 12. Sep 2023.
+  <!--
+  <Countdown title="Saisonstart" date="Jun 01, 2024 10:00:00" bg_color="secondary">
+    Die Saison startet am 01. Jun 2024.
   </Countdown>
-     -->
+   -->
 
   <Accordion />
   <OSM className="full-width" />
