--- a/src/pages/zeiten.astro
+++ b/src/pages/zeiten.astro
@@ -13,11 +13,11 @@ import MainLayout from "../layouts/MainLayout.astro";
 >
   <Grid titel="Öffnungszeiten">
     <Banner
-    title="Freibad geschlossen"
-    icon="IcRoundWarning"
-    bg_color="neutral"
+    id="Heimatfest"
+    title="Geänderte Öffnungszeiten aufgrund des Heimatfestes"
+    icon="LogosPartytownIcon"
   >
-    Das Freibad ist bis zum Saisonstart geschlossen.
+  <p>Samstag (08.06) und Sonntag (09.06) nur von <b> 10 - 12 Uhr</b>. Freitag (07.06) und Montag (10.06) normal von <b>15 -20 Uhr</b>.</p>
   </Banner>
   <!--Bei schlechtem Wetter kann die Badezeit früher enden !!! 
   <Banner
