--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -273,3 +273,7 @@ img.full-width {
 .on-hover:hover::after {
   opacity: 1;
 }
+
+#Heimatfest {
+  background-image: linear-gradient(to right, #fee140 0%, #70c6fa 100%);
+}
