--- a/src/pages/veranstaltungen.astro
+++ b/src/pages/veranstaltungen.astro
@@ -54,6 +54,13 @@ import TermineItem from "../components/Veranstaltungen/TermineItem.astro";
             />
             <div></div>
             <TermineItem
+                date="10."
+                day="Sa"
+                month="August"
+                titel="12 Stunden Schwimmen"
+            />
+            <div></div>
+            <TermineItem
                 date="31."
                 day="Sa"
                 month="August"
