--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,8 +21,8 @@ import Countdown from "components/Countdown.astro";
         classes="transition-fade primary"
       />
       <Verlinkung
-        href="/documents/12StundenSchwimmen.jpg"
-        label="12 Stunden Schwimmen"
+        href="/documents/poolsOutParty.pdf"
+        label="POOL`S OUT PARTY"
         classes="transition-fade secondary"
       />
     </div>
