--- a/src/pages/veranstaltungen.astro
+++ b/src/pages/veranstaltungen.astro
@@ -64,7 +64,7 @@ import TermineItem from "../components/Veranstaltungen/TermineItem.astro";
                 date="31."
                 day="Sa"
                 month="August"
-                titel="Poolparty"
+                titel="POOL`S OUT PARTY"
             />
         </TermineGrid>
     </Grid>
