--- a/src/pages/zeiten.astro
+++ b/src/pages/zeiten.astro
@@ -12,19 +12,19 @@ import MainLayout from "../layouts/MainLayout.astro";
   description="Aktuelle Öffnungszeiten des Freibads Delligsen"
 >
   <Grid titel="Öffnungszeiten">
-    <Banner
+    <!--<Banner
     id="Heimatfest"
     title="Geänderte Öffnungszeiten aufgrund des Heimatfestes"
     icon="LogosPartytownIcon"
   >
   <p>Samstag (08.06) und Sonntag (09.06) nur von <b> 10 - 12 Uhr</b>. Freitag (07.06) und Montag (10.06) normal von <b>15 -20 Uhr</b>.</p>
-  </Banner>
-  <!--Bei schlechtem Wetter kann die Badezeit früher enden !!! 
+  </Banner>-->
+  <!--Bei schlechtem Wetter kann die Badezeit früher enden !!! -->
   <Banner
     title="Bei schlechtem Wetter kann die Badezeit früher enden !!!"
     icon="IcRoundRainy"
     bg_color="error"
-  />-->
+  />
     <Card titel="In der Schulzeit">
       <CardItem titel="Montag bis Freitag" content="15:00 - 20:00 Uhr" />
       <CardItem
