--- a/src/pages/zeiten.astro
+++ b/src/pages/zeiten.astro
@@ -20,11 +20,18 @@ import MainLayout from "../layouts/MainLayout.astro";
   <p>Samstag (08.06) und Sonntag (09.06) nur von <b> 10 - 12 Uhr</b>. Freitag (07.06) und Montag (10.06) normal von <b>15 -20 Uhr</b>.</p>
   </Banner>-->
   <!--Bei schlechtem Wetter kann die Badezeit früher enden !!! -->
+  <!--
   <Banner
     title="Bei schlechtem Wetter kann die Badezeit früher enden !!!"
     icon="IcRoundRainy"
     bg_color="error"
-  />
+  /> -->
+  <Banner
+  title="Saisonverlängerung"
+  icon="IcRoundTimelapse"
+  bg_color="positive">
+  Die Saison wurde bis zum 6. September 2024 verlngert von 17 bis 20 Uhr.
+</Banner>
     <Card titel="In der Schulzeit">
       <CardItem titel="Montag bis Freitag" content="15:00 - 20:00 Uhr" />
       <CardItem
