--- a/src/pages/zeiten.astro
+++ b/src/pages/zeiten.astro
@@ -30,7 +30,7 @@ import MainLayout from "../layouts/MainLayout.astro";
   title="Saisonverlängerung"
   icon="IcRoundTimelapse"
   bg_color="positive">
-  Die Saison wurde bis zum 6. September 2024 verlngert von 17 bis 20 Uhr.
+  Die Saison wurde bis zum 6. September 2024 von 17 bis 20 Uhr verlängert.
 </Banner>
     <Card titel="In der Schulzeit">
       <CardItem titel="Montag bis Freitag" content="15:00 - 20:00 Uhr" />
