--- a/src/pages/neues/[...page].astro
+++ b/src/pages/neues/[...page].astro
@@ -1,7 +1,7 @@
 ---
 // component imports
 import MainLayout from "../../layouts/MainLayout.astro";
-import PostCard from "../../components/Neues/PostCard.astro";
+import PostCard from "../../components/Neues/PostCardNew.astro";
 import Pagination from "../../components/Pagination.astro";
 import Grid from "../../components/Grid.astro";
 
@@ -41,7 +41,7 @@ const { page } = Astro.props;
     <Pagination prevUrl={page.url.prev} nextUrl={page.url.next} currentPage={page.currentPage} totalPage={page.lastPage}/>
 </MainLayout>
 <style>
-	.card {
+	.card_old {
 		margin: 5%;
 		margin-left: 10%;
 		margin-right: 10%;
@@ -60,7 +60,7 @@ const { page } = Astro.props;
 	}
 	
 	@media screen and (max-width: 720px) {
-		.card {
+		.card_old {
 			grid-template-columns: 1fr;
 			grid-template-rows: 0.7fr 1fr;
 			gap: 2.5%;
