--- a/src/components/Neues/PostCardNew.astro
+++ b/src/components/Neues/PostCardNew.astro
@@ -4,7 +4,7 @@ import BlogImage from "./BlogImage.astro";
 const { img, titel, pubDate, description, href, width, height } = Astro.props;
 ---
 
-<div class="card bg-base-100 w-96 shadow-xl grid">
+<div class="card bg-base-100 shadow-xl grid">
     <figure>
         {
             width && (
@@ -49,6 +49,7 @@ const { img, titel, pubDate, description, href, width, height } = Astro.props;
 
 <style>
     .card {
-        grid-template-rows: 50% auto;
+        grid-template-rows: 15rem auto;
+        width: clamp(20rem, 25.6rem, 25.6rem);
     }
 </style>
