--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -32,7 +32,9 @@ const { title, description, pubDate, updatedDate, src, width, height } =
         <slot />
       </div>
     </div>
-    <Back url="javascript:history.back()" txt="Übersicht" />
+    <div class="flex justify-end">
+      <a href="javascript:history.back()" role="button" class="btn">Zurück <Icon name="undo" class="h-6 w-6"/></a>
+    </div>
   </article>
 </MainLayout>
 <style>
@@ -61,16 +63,12 @@ const { title, description, pubDate, updatedDate, src, width, height } =
     width: 100%;
     height: fit-content;
     gap: 30px;
-    padding: 4%;
-    border-radius: var(--border-radius);
-    background-color: var(--article);
-    border: var(--border-grey) 1px solid;
     margin-inline: auto;
   }
   h1 {
-    font-weight: 500;
+    font-weight: 700;
     margin-block: 1rem;
-    font-size: clamp(1.7rem, 1.4551rem + 1.3061vw, 2.5rem);
+    font-size: clamp(2rem, 0.7179rem + 4.1026vw, 4rem);
   }
   @media screen and (max-width: 1050px) {
     article {
