--- a/src/components/Nav/NavigationBar.astro
+++ b/src/components/Nav/NavigationBar.astro
@@ -205,15 +205,15 @@ const { className } = Astro.props;
         }
     }
 
-    .toggle .line1 {
+    .burgerToggle .line1 {
         transform: rotate(-45deg) translate(-5px, 6px);
     }
 
-    .toggle .line2 {
+    .burgerToggle .line2 {
         opacity: 0;
     }
 
-    .toggle .line3 {
+    .burgerToggle .line3 {
         transform: rotate(45deg) translate(-5px, -6px);
     }
 </style>
