--- a/src/components/Galerie/GalerieItem.astro
+++ b/src/components/Galerie/GalerieItem.astro
@@ -49,20 +49,18 @@ import { Picture } from "astro:assets";
     img {
         transition: 0.3s;
         display: block;
-        width: 100%;
         border-radius: var(--border-radius);
-        height: auto;
+        height: 100%;
     }
     p {
         font-weight: 300;
         font-size: 1.3rem;
-        color: var(--text);
+        color: white;
         padding: 16px;
-        margin: 16px;
-        background-color: rgba(240, 248, 255, 0.847);
+        background-color: rgba(0, 0, 0, 0.847);
         -webkit-backdrop-filter: blur(10px);
         backdrop-filter: blur(10px);
-        border-radius: var(--border-radius);
+        border-radius: var(--border-radius) 0 0 0;
         text-align: center;
     }
 </style>
