--- a/src/components/Nav/NavigationBar.astro
+++ b/src/components/Nav/NavigationBar.astro
@@ -1,21 +1,90 @@
 ---
 import { Icon } from "astro-icon";
-import NavItem from "./NavItem.astro";
+import NavItem from "./NavbarItem.astro";
 
 const pathname = new URL(Astro.request.url).pathname;
 const currentPath = pathname.split("/");
 const { className } = Astro.props;
 ---
 
-<nav id="homeNav" class={`${className}`}>
-    <a class="noLink" href="/">
-        <div class="logo">
-            <Icon name="freibadLogo" />
-            <h4>Freibad Delligsen</h4>
-        </div>
-    </a>
-    <ul class="nav-links">
+<div class="drawer drawer-end">
+    <input id="my-drawer-3" type="checkbox" class="drawer-toggle" />
+    <div class="drawer-content flex flex-col">
+        <!-- Navbar -->
+        <div class="navbar w-full">
+            <div class="mx-2 flex-1 px-2 logo">
+                <Icon name="freibadLogo" />c
+                <h4>Freibad Delligsen</h4>
+            </div>
+            <div class="hidden flex-none lg:block">
+                <ul class="menu menu-horizontal gap-2">
+                    <!-- Navbar menu content here -->
+                    <NavItem
+            title="Startseite"
+            url=""
+            current={currentPath[1]}
+            
+        />
         <NavItem
+            title="Öffnungszeiten"
+            url="zeiten"
+            current={currentPath[1]}
+            
+        />
+        <NavItem
+            title="Eintrittspreise"
+            url="preise"
+            current={currentPath[1]}
+            
+        />
+        <NavItem
+            title="Veranstaltungen"
+            url="veranstaltungen"
+            current={currentPath[1]}
+            
+        />
+        <NavItem
+            title="Neuigkeiten"
+            url="neues"
+            current={currentPath[1]}
+            
+        />
+        <NavItem
+            title="Galerie"
+            url="galerie"
+            current={currentPath[1]}
+            
+        />
+                </ul>
+            </div>
+            <div class="flex-none lg:hidden z-20">
+                    <label
+                    for="my-drawer-3"
+                    aria-label="toggle sidebar"
+                    class="group transition flex items-center justify-center btn btn-square has-aria-pressed:btn-outline"
+                    onclick="this.setAttribute('aria-pressed', !(this.getAttribute('aria-pressed') === 'true'))"
+                >
+                    <svg class="w-6 h-6 fill-current pointer-events-none" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
+                        <rect class="origin-center -translate-y-[5px] translate-x-[7px] transition-all duration-300 ease-[cubic-bezier(.5,.85,.25,1.1)] group-[[aria-pressed=true]]:translate-x-0 group-[[aria-pressed=true]]:translate-y-0 group-[[aria-pressed=true]]:rotate-[315deg]" y="7" width="9" height="2" rx="1"></rect>
+                        <rect class="origin-center transition-all duration-300 ease-[cubic-bezier(.5,.85,.25,1.8)] group-[[aria-pressed=true]]:rotate-45" y="7" width="16" height="2" rx="1"></rect>
+                        <rect class="origin-center translate-y-[5px] transition-all duration-300 ease-[cubic-bezier(.5,.85,.25,1.1)] group-[[aria-pressed=true]]:translate-y-0 group-[[aria-pressed=true]]:-rotate-[225deg]" y="7" width="9" height="2" rx="1"></rect>
+                    </svg>
+                    </label>
+                
+            </div>
+        </div>
+        <!-- Page content here -->
+        Content
+    </div>
+    <div class="drawer-side z-10">
+
+        <label
+            for="my-drawer-3"
+            aria-label="close sidebar"
+            class="drawer-overlay"></label>
+        <ul class="menu bg-base-100 min-h-full max-w-80 w-full p-4 pt-20 gap-3">
+            <!-- Sidebar content here -->
+            <NavItem
             title="Startseite"
             url=""
             current={currentPath[1]}
@@ -51,33 +120,11 @@ const { className } = Astro.props;
             current={currentPath[1]}
             icon="gallery"
         />
-    </ul>
-    <div
-        class="burger"
-        aria-label="Menu öffnen"
-        aria-controls="nav-links"
-        aria-expanded="false"
-    >
-        <div class="line1"></div>
-        <div class="line2"></div>
-        <div class="line3"></div>
+        </ul>
     </div>
-</nav>
+</div>
 
 <style>
-    nav {
-        z-index: 999;
-        top: 0;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-    }
-
-    /*Logo*/
-    .noLink {
-        text-decoration: none;
-    }
-
     .logo {
         display: flex;
         flex-direction: row;
@@ -95,125 +142,5 @@ const { className } = Astro.props;
         font-weight: 700;
         letter-spacing: -1px;
         margin-left: 1rem;
-    }
-
-    /*NavLinks*/
-    .nav-links {
-        display: flex;
-        justify-content: space-around;
-        transition: all 0.2s ease-in-out;
-    }
-
-    /*Burger*/
-    .burger {
-        display: none;
-        cursor: pointer;
-    }
-
-    .burger div {
-        width: 25px;
-        height: 5px;
-        background-color: var(--text);
-        margin: 3px;
-        border-radius: 2px;
-        transition: all 0.3s ease;
-    }
-
-    @media screen and (max-width: 1270px) {
-        .nav-links {
-            position: absolute;
-            right: 0px;
-            height: fit-content;
-            top: calc(var(--navbar-height) + 1rem);
-            bottom: 1vh;
-            background-color: white;
-            border-top-left-radius: var(--border-radius);
-            border-end-start-radius: var(--border-radius);
-            flex-direction: column;
-            align-items: flex-start;
-            gap: 1rem;
-            padding: 1rem;
-            width: 300px;
-            box-shadow: var(--nav-shadow);
-            transform: translateX(110%) rotateY(135deg);
-            opacity: 0.9;
-        }
-        .burger {
-            display: block;
-        }
-    }
-
-    @media screen and (max-width: 500px) {
-        .nav-links {
-            right: 0px;
-            height: calc(100vh - 2 * 1.5rem - 1.75rem);
-            top: calc(2 * 1.5rem + 1.75rem);
-            background-color: white;
-            border-radius: 0px;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            width: 100%;
-            box-shadow: none;
-            padding-bottom: 8vh;
-            transform: translateX(100%) rotateY(135deg);
-            opacity: 0.9;
-        }
-    }
-
-    @media screen and (max-width: 400px) {
-        .logo [astro-icon="freibadLogo"] {
-            display: none !important;
-        }
-
-        .logo h4 {
-            margin: 0px;
-        }
-
-        .nav-links {
-            position: absolute;
-        }
-    }
-
-    /* Menu Animationen */
-
-    .nav-active {
-        transform: translateX(0%) rotateY(0deg);
-        opacity: 1;
-    }
-
-    @keyframes navLinkFade {
-        from {
-            opacity: 0;
-            transform: translateX(50px);
-        }
-
-        to {
-            opacity: 1;
-            transform: translateX(0px);
-        }
-    }
-    @keyframes navLinkFadeOut {
-        from {
-            opacity: 1;
-            transform: translateX(0px);
-        }
-
-        to {
-            opacity: 0;
-            transform: translateX(50px);
-        }
-    }
-
-    .burgerToggle .line1 {
-        transform: rotate(-45deg) translate(-5px, 6px);
-    }
-
-    .burgerToggle .line2 {
-        opacity: 0;
-    }
-
-    .burgerToggle .line3 {
-        transform: rotate(45deg) translate(-5px, -6px);
     }
 </style>
