--- a/src/components/Neues/PostCardNew.astro
+++ b/src/components/Neues/PostCardNew.astro
@@ -50,6 +50,7 @@ const { img, titel, pubDate, description, href, width, height } = Astro.props;
 <style>
     .card {
         grid-template-rows: 15rem auto;
-        width: clamp(20rem, 25.6rem, 25.6rem);
+        width: 100%;
+        max-width: 25.6rem;
     }
 </style>
